--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
     position: absolute;
     top: 25px;
     left: 25px;
-    width: 500px;
+    width: 20%;
     height: auto;
 }
 
@@ -21,7 +21,7 @@ html, body {
     position: absolute;
     top: 25px;
     right: 25px;
-    width: 350px;
+    width: 25%;
     height: auto;
 }
 
@@ -30,7 +30,6 @@ html, body {
 }
 
 .overflow {
-    height: 600px;
-    width: 350px;
+    height: 300px;
     overflow: scroll;
 }
